Portage de la version 26.2 vers 1.8.9 (le plus gros morceau a ete la generation de map). J'ai abandonne la generation de lacs (donc pas de lacs ni d'eau generee), mais le reste fonctionne, avec en plus une generation asynchrone (pool de workers), qui permet au serveur de ne pas freeze.